# IncusDesktop

./: .gitignore  README.md
IncusDesktop_Agent/: app.py  requirements.txt
IncusDesktop_Agent/Agent/: app.py  requirements.txt
IncusDesktop_Agent/Utilities/: consts.py  logger.py
IncusDesktop_Agent/blueprints/: certificates_bp.py  cluster_bp.py  images_bp.py  instancesExec_bp.py  instances_backups_bp.py  instances_bp.py  instances_metadata_bp.py  instances_misc_bp.py  instances_snapshots_bp.py  network_acls_bp.py  network_address_sets_bp.py  network_allocations_bp.py  network_integrations_bp.py  network_zones_bp.py  network_zones_records_bp.py  networks_bp.py  networks_forwards_bp.py  networks_load_balancers_bp.py  networks_peers_bp.py  operations_bp.py  profiles_bp.py  projects_bp.py  server_bp.py  storage_buckets_backups_bp.py  storage_buckets_bp.py  storage_buckets_keys_bp.py  storage_pools_bp.py  storage_volumes_backups_bp.py  storage_volumes_bitmaps_bp.py  storage_volumes_bp.py  storage_volumes_files_bp.py  storage_volumes_snapshots_bp.py  warnings_bp.py
IncusDesktop_Agent/claude_ws/: PLAN.md  TODO.md
IncusDesktop_Agent/cli/: main.py  pyproject.toml
IncusDesktop_Agent/cli/commands/: setup.py
IncusDesktop_Agent/cli/incuscli/: main.py
IncusDesktop_Agent/cli/incuscli/commands/: setup.py
IncusDesktop_Agent/cli/incuscli/commands/agents/: agents.py
IncusDesktop_Agent/cli/utility/: consts.py
IncusDesktop_App/: App.xaml  App.xaml.cs  IncusDesktop_App.csproj  IncusDesktop_App.sln  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs
(+149 files in other folders)
