[project]
name = "incuscli"
version = "0.1.0"
description = "Management CLI for Incus Agent"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15.0",
    "rich>=13.9.4",
    "httpx>=0.27.2",
]

[project.scripts]
incuscli = "incuscli.main:app"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["incuscli*"]